added switch video functionality

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 					<a href="#" class="tubular-pause">Pause</a> |
 					<a href="#" class="tubular-volume-up">Volume Up</a> |
 					<a href="#" class="tubular-volume-down">Volume Down</a> |
-					<a href="#" class="tubular-mute">Mute</a>
+					<a href="#" class="tubular-mute">Mute</a><br />
+					<a href="#" class="tubular-switch" data-id="f-UGhWj1xww">Video f-UGhWj1xww</a> |
+					<a href="#" class="tubular-switch" data-id="49SKbS7Xwf4">Video 49SKbS7Xwf4</a>
 				</p>
 				<div class="black-50">
 					<h1>jQuery tubular</h1>
